new fixes